parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> kword_declaration
Rule 4     statement -> variable_assignment
Rule 5     statement -> python_code_stmt
Rule 6     statement -> conditional
Rule 7     statement -> class_attribute_assignment
Rule 8     statement -> function_call_stmt
Rule 9     statement -> class_declaration
Rule 10    statement -> function_declaration
Rule 11    function_call_stmt -> function_call ;
Rule 12    python_code_stmt -> python_code ;
Rule 13    function_call -> expression ( empty )
Rule 14    function_call -> expression ( function_arguments )
Rule 15    function_declaration -> FUNC ID ( empty ) { program }
Rule 16    function_declaration -> FUNC ID ( function_arguments ) { program }
Rule 17    kword_declaration -> KWORD ID ( empty ) { program }
Rule 18    kword_declaration -> KWORD ID ( function_arguments ) { program }
Rule 19    function_arguments -> kwargs
Rule 20    function_arguments -> positional_args , kwargs  [precedence=left, level=1]
Rule 21    function_arguments -> positional_args
Rule 22    class_declaration -> CLASS ID { program }
Rule 23    positional_args -> expression
Rule 24    positional_args -> positional_args , expression  [precedence=left, level=1]
Rule 25    kwargs -> ID = expression
Rule 26    kwargs -> kwargs , id = expression
Rule 27    variable_assignment -> ID = expression ;
Rule 28    class_attribute_assignment -> class_attribute = expression ;
Rule 29    conditional -> if_statement else_statement
Rule 30    conditional -> if_statement else_if_loop else_statement
Rule 31    conditional -> if_statement else_if_loop
Rule 32    conditional -> if_statement
Rule 33    if_statement -> IF ( expression ) { program }
Rule 34    else_if_loop -> else_if_statement
Rule 35    else_if_loop -> else_if_loop else_if_statement
Rule 36    else_if_statement -> ELSE IF ( expression ) { program }
Rule 37    else_statement -> ELSE { program }
Rule 38    expression -> _numpy
Rule 39    expression -> _list
Rule 40    expression -> _tuple
Rule 41    expression -> class_attribute
Rule 42    expression -> id
Rule 43    expression -> string
Rule 44    expression -> bool
Rule 45    expression -> float
Rule 46    expression -> int
Rule 47    expression -> function_call
Rule 48    expression -> python_code
Rule 49    expression -> ( expression )
Rule 50    expression -> expression > expression  [precedence=left, level=5]
Rule 51    expression -> expression < expression  [precedence=left, level=5]
Rule 52    expression -> ! expression  [precedence=right, level=9]
Rule 53    expression -> expression & expression  [precedence=left, level=3]
Rule 54    expression -> expression | expression  [precedence=left, level=2]
Rule 55    expression -> expression EQ_GREATER expression  [precedence=left, level=5]
Rule 56    expression -> expression EQ_LESS expression  [precedence=left, level=5]
Rule 57    expression -> expression NOT_EQEQ expression  [precedence=left, level=4]
Rule 58    expression -> expression EQEQ expression  [precedence=left, level=4]
Rule 59    expression -> expression % expression  [precedence=left, level=7]
Rule 60    expression -> expression * expression  [precedence=left, level=7]
Rule 61    expression -> expression / expression  [precedence=left, level=7]
Rule 62    expression -> expression - expression  [precedence=left, level=6]
Rule 63    expression -> expression + expression  [precedence=left, level=6]
Rule 64    expression -> + expression  [precedence=right, level=8]
Rule 65    expression -> - expression  [precedence=right, level=8]
Rule 66    _tuple -> { positional_args }
Rule 67    _list -> [ positional_args ]
Rule 68    _numpy -> ( positional_args )
Rule 69    int -> INT
Rule 70    string -> STRING
Rule 71    float -> FLOAT
Rule 72    bool -> FALSE
Rule 73    bool -> TRUE
Rule 74    class_attribute -> expression COLON_COLON ID
Rule 75    id -> ID
Rule 76    python_code -> PYTHON_CODE
Rule 77    empty -> <empty>

Terminals, with rules where they appear:

!                    : 52
%                    : 59
&                    : 53
(                    : 13 14 15 16 17 18 33 36 49 68
)                    : 13 14 15 16 17 18 33 36 49 68
*                    : 60
+                    : 63 64
,                    : 20 24 26
-                    : 62 65
/                    : 61
;                    : 11 12 27 28
<                    : 51
=                    : 25 26 27 28
>                    : 50
CLASS                : 22
COLON_COLON          : 74
ELSE                 : 36 37
EQEQ                 : 58
EQ_GREATER           : 55
EQ_LESS              : 56
FALSE                : 72
FLOAT                : 71
FUNC                 : 15 16
ID                   : 15 16 17 18 22 25 27 74 75
IF                   : 33 36
INT                  : 69
KWORD                : 17 18
NOT_EQEQ             : 57
PYTHON_CODE          : 76
STRING               : 70
TRUE                 : 73
[                    : 67
]                    : 67
error                : 
{                    : 15 16 17 18 22 33 36 37 66
|                    : 54
}                    : 15 16 17 18 22 33 36 37 66

Nonterminals, with rules where they appear:

_list                : 39
_numpy               : 38
_tuple               : 40
bool                 : 44
class_attribute      : 28 41
class_attribute_assignment : 7
class_declaration    : 9
conditional          : 6
else_if_loop         : 30 31 35
else_if_statement    : 34 35
else_statement       : 29 30
empty                : 13 15 17
expression           : 13 14 23 24 25 26 27 28 33 36 49 50 50 51 51 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 74
float                : 45
function_arguments   : 14 16 18
function_call        : 11 47
function_call_stmt   : 8
function_declaration : 10
id                   : 26 42
if_statement         : 29 30 31 32
int                  : 46
kwargs               : 19 20 26
kword_declaration    : 3
positional_args      : 20 21 24 66 67 68
program              : 2 15 16 17 18 22 33 36 37 0
python_code          : 12 48
python_code_stmt     : 5
statement            : 1 2
string               : 43
variable_assignment  : 4


state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . kword_declaration
    (4) statement -> . variable_assignment
    (5) statement -> . python_code_stmt
    (6) statement -> . conditional
    (7) statement -> . class_attribute_assignment
    (8) statement -> . function_call_stmt
    (9) statement -> . class_declaration
    (10) statement -> . function_declaration
    (17) kword_declaration -> . KWORD ID ( empty ) { program }
    (18) kword_declaration -> . KWORD ID ( function_arguments ) { program }
    (27) variable_assignment -> . ID = expression ;
    (12) python_code_stmt -> . python_code ;
    (29) conditional -> . if_statement else_statement
    (30) conditional -> . if_statement else_if_loop else_statement
    (31) conditional -> . if_statement else_if_loop
    (32) conditional -> . if_statement
    (28) class_attribute_assignment -> . class_attribute = expression ;
    (11) function_call_stmt -> . function_call ;
    (22) class_declaration -> . CLASS ID { program }
    (15) function_declaration -> . FUNC ID ( empty ) { program }
    (16) function_declaration -> . FUNC ID ( function_arguments ) { program }
    (76) python_code -> . PYTHON_CODE
    (33) if_statement -> . IF ( expression ) { program }
    (74) class_attribute -> . expression COLON_COLON ID
    (13) function_call -> . expression ( empty )
    (14) function_call -> . expression ( function_arguments )
    (38) expression -> . _numpy
    (39) expression -> . _list
    (40) expression -> . _tuple
    (41) expression -> . class_attribute
    (42) expression -> . id
    (43) expression -> . string
    (44) expression -> . bool
    (45) expression -> . float
    (46) expression -> . int
    (47) expression -> . function_call
    (48) expression -> . python_code
    (49) expression -> . ( expression )
    (50) expression -> . expression > expression
    (51) expression -> . expression < expression
    (52) expression -> . ! expression
    (53) expression -> . expression & expression
    (54) expression -> . expression | expression
    (55) expression -> . expression EQ_GREATER expression
    (56) expression -> . expression EQ_LESS expression
    (57) expression -> . expression NOT_EQEQ expression
    (58) expression -> . expression EQEQ expression
    (59) expression -> . expression % expression
    (60) expression -> . expression * expression
    (61) expression -> . expression / expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (64) expression -> . + expression
    (65) expression -> . - expression
    (68) _numpy -> . ( positional_args )
    (67) _list -> . [ positional_args ]
    (66) _tuple -> . { positional_args }
    (75) id -> . ID
    (70) string -> . STRING
    (72) bool -> . FALSE
    (73) bool -> . TRUE
    (71) float -> . FLOAT
    (69) int -> . INT
    KWORD           shift and go to state 11
    ID              shift and go to state 12
    CLASS           shift and go to state 20
    FUNC            shift and go to state 21
    PYTHON_CODE     shift and go to state 22
    IF              shift and go to state 23
    (               shift and go to state 13
    !               shift and go to state 32
    +               shift and go to state 34
    -               shift and go to state 33
    [               shift and go to state 35
    {               shift and go to state 14
    STRING          shift and go to state 36
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    FLOAT           shift and go to state 39
    INT             shift and go to state 40

    program                        shift and go to state 1
    statement                      shift and go to state 2
    kword_declaration              shift and go to state 3
    variable_assignment            shift and go to state 4
    python_code_stmt               shift and go to state 5
    conditional                    shift and go to state 6
    class_attribute_assignment     shift and go to state 7
    function_call_stmt             shift and go to state 8
    class_declaration              shift and go to state 9
    function_declaration           shift and go to state 10
    expression                     shift and go to state 15
    python_code                    shift and go to state 16
    if_statement                   shift and go to state 17
    class_attribute                shift and go to state 18
    function_call                  shift and go to state 19
    _numpy                         shift and go to state 24
    _list                          shift and go to state 25
    _tuple                         shift and go to state 26
    id                             shift and go to state 27
    string                         shift and go to state 28
    bool                           shift and go to state 29
    float                          shift and go to state 30
    int                            shift and go to state 31

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . kword_declaration
    (4) statement -> . variable_assignment
    (5) statement -> . python_code_stmt
    (6) statement -> . conditional
    (7) statement -> . class_attribute_assignment
    (8) statement -> . function_call_stmt
    (9) statement -> . class_declaration
    (10) statement -> . function_declaration
    (17) kword_declaration -> . KWORD ID ( empty ) { program }
    (18) kword_declaration -> . KWORD ID ( function_arguments ) { program }
    (27) variable_assignment -> . ID = expression ;
    (12) python_code_stmt -> . python_code ;
    (29) conditional -> . if_statement else_statement
    (30) conditional -> . if_statement else_if_loop else_statement
    (31) conditional -> . if_statement else_if_loop
    (32) conditional -> . if_statement
    (28) class_attribute_assignment -> . class_attribute = expression ;
    (11) function_call_stmt -> . function_call ;
    (22) class_declaration -> . CLASS ID { program }
    (15) function_declaration -> . FUNC ID ( empty ) { program }
    (16) function_declaration -> . FUNC ID ( function_arguments ) { program }
    (76) python_code -> . PYTHON_CODE
    (33) if_statement -> . IF ( expression ) { program }
    (74) class_attribute -> . expression COLON_COLON ID
    (13) function_call -> . expression ( empty )
    (14) function_call -> . expression ( function_arguments )
    (38) expression -> . _numpy
    (39) expression -> . _list
    (40) expression -> . _tuple
    (41) expression -> . class_attribute
    (42) expression -> . id
    (43) expression -> . string
    (44) expression -> . bool
    (45) expression -> . float
    (46) expression -> . int
    (47) expression -> . function_call
    (48) expression -> . python_code
    (49) expression -> . ( expression )
    (50) expression -> . expression > expression
    (51) expression -> . expression < expression
    (52) expression -> . ! expression
    (53) expression -> . expression & expression
    (54) expression -> . expression | expression
    (55) expression -> . expression EQ_GREATER expression
    (56) expression -> . expression EQ_LESS expression
    (57) expression -> . expression NOT_EQEQ expression
    (58) expression -> . expression EQEQ expression
    (59) expression -> . expression % expression
    (60) expression -> . expression * expression
    (61) expression -> . expression / expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (64) expression -> . + expression
    (65) expression -> . - expression
    (68) _numpy -> . ( positional_args )
    (67) _list -> . [ positional_args ]
    (66) _tuple -> . { positional_args }
    (75) id -> . ID
    (70) string -> . STRING
    (72) bool -> . FALSE
    (73) bool -> . TRUE
    (71) float -> . FLOAT
    (69) int -> . INT
    KWORD           shift and go to state 11
    ID              shift and go to state 12
    CLASS           shift and go to state 20
    FUNC            shift and go to state 21
    PYTHON_CODE     shift and go to state 22
    IF              shift and go to state 23
    (               shift and go to state 13
    !               shift and go to state 32
    +               shift and go to state 34
    -               shift and go to state 33
    [               shift and go to state 35
    {               shift and go to state 14
    STRING          shift and go to state 36
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    FLOAT           shift and go to state 39
    INT             shift and go to state 40

    statement                      shift and go to state 41
    kword_declaration              shift and go to state 3
    variable_assignment            shift and go to state 4
    python_code_stmt               shift and go to state 5
    conditional                    shift and go to state 6
    class_attribute_assignment     shift and go to state 7
    function_call_stmt             shift and go to state 8
    class_declaration              shift and go to state 9
    function_declaration           shift and go to state 10
    expression                     shift and go to state 15
    python_code                    shift and go to state 16
    if_statement                   shift and go to state 17
    class_attribute                shift and go to state 18
    function_call                  shift and go to state 19
    _numpy                         shift and go to state 24
    _list                          shift and go to state 25
    _tuple                         shift and go to state 26
    id                             shift and go to state 27
    string                         shift and go to state 28
    bool                           shift and go to state 29
    float                          shift and go to state 30
    int                            shift and go to state 31

state 2

    (1) program -> statement .
    KWORD           reduce using rule 1 (program -> statement .)
    ID              reduce using rule 1 (program -> statement .)
    CLASS           reduce using rule 1 (program -> statement .)
    FUNC            reduce using rule 1 (program -> statement .)
    PYTHON_CODE     reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    (               reduce using rule 1 (program -> statement .)
    !               reduce using rule 1 (program -> statement .)
    +               reduce using rule 1 (program -> statement .)
    -               reduce using rule 1 (program -> statement .)
    [               reduce using rule 1 (program -> statement .)
    {               reduce using rule 1 (program -> statement .)
    STRING          reduce using rule 1 (program -> statement .)
    FALSE           reduce using rule 1 (program -> statement .)
    TRUE            reduce using rule 1 (program -> statement .)
    FLOAT           reduce using rule 1 (program -> statement .)
    INT             reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)
    }               reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> kword_declaration .
    KWORD           reduce using rule 3 (statement -> kword_declaration .)
    ID              reduce using rule 3 (statement -> kword_declaration .)
    CLASS           reduce using rule 3 (statement -> kword_declaration .)
    FUNC            reduce using rule 3 (statement -> kword_declaration .)
    PYTHON_CODE     reduce using rule 3 (statement -> kword_declaration .)
    IF              reduce using rule 3 (statement -> kword_declaration .)
    (               reduce using rule 3 (statement -> kword_declaration .)
    !               reduce using rule 3 (statement -> kword_declaration .)
    +               reduce using rule 3 (statement -> kword_declaration .)
    -               reduce using rule 3 (statement -> kword_declaration .)
    [               reduce using rule 3 (statement -> kword_declaration .)
    {               reduce using rule 3 (statement -> kword_declaration .)
    STRING          reduce using rule 3 (statement -> kword_declaration .)
    FALSE           reduce using rule 3 (statement -> kword_declaration .)
    TRUE            reduce using rule 3 (statement -> kword_declaration .)
    FLOAT           reduce using rule 3 (statement -> kword_declaration .)
    INT             reduce using rule 3 (statement -> kword_declaration .)
    $end            reduce using rule 3 (statement -> kword_declaration .)
    }               reduce using rule 3 (statement -> kword_declaration .)


state 4

    (4) statement -> variable_assignment .
    KWORD           reduce using rule 4 (statement -> variable_assignment .)
    ID              reduce using rule 4 (statement -> variable_assignment .)
    CLASS           reduce using rule 4 (statement -> variable_assignment .)
    FUNC            reduce using rule 4 (statement -> variable_assignment .)
    PYTHON_CODE     reduce using rule 4 (statement -> variable_assignment .)
    IF              reduce using rule 4 (statement -> variable_assignment .)
    (               reduce using rule 4 (statement -> variable_assignment .)
    !               reduce using rule 4 (statement -> variable_assignment .)
    +               reduce using rule 4 (statement -> variable_assignment .)
    -               reduce using rule 4 (statement -> variable_assignment .)
    [               reduce using rule 4 (statement -> variable_assignment .)
    {               reduce using rule 4 (statement -> variable_assignment .)
    STRING          reduce using rule 4 (statement -> variable_assignment .)
    FALSE           reduce using rule 4 (statement -> variable_assignment .)
    TRUE            reduce using rule 4 (statement -> variable_assignment .)
    FLOAT           reduce using rule 4 (statement -> variable_assignment .)
    INT             reduce using rule 4 (statement -> variable_assignment .)
    $end            reduce using rule 4 (statement -> variable_assignment .)
    }               reduce using rule 4 (statement -> variable_assignment .)


state 5

    (5) statement -> python_code_stmt .
    KWORD           reduce using rule 5 (statement -> python_code_stmt .)
    ID              reduce using rule 5 (statement -> python_code_stmt .)
    CLASS           reduce using rule 5 (statement -> python_code_stmt .)
    FUNC            reduce using rule 5 (statement -> python_code_stmt .)
    PYTHON_CODE     reduce using rule 5 (statement -> python_code_stmt .)
    IF              reduce using rule 5 (statement -> python_code_stmt .)
    (               reduce using rule 5 (statement -> python_code_stmt .)
    !               reduce using rule 5 (statement -> python_code_stmt .)
    +               reduce using rule 5 (statement -> python_code_stmt .)
    -               reduce using rule 5 (statement -> python_code_stmt .)
    [               reduce using rule 5 (statement -> python_code_stmt .)
    {               reduce using rule 5 (statement -> python_code_stmt .)
    STRING          reduce using rule 5 (statement -> python_code_stmt .)
    FALSE           reduce using rule 5 (statement -> python_code_stmt .)
    TRUE            reduce using rule 5 (statement -> python_code_stmt .)
    FLOAT           reduce using rule 5 (statement -> python_code_stmt .)
    INT             reduce using rule 5 (statement -> python_code_stmt .)
    $end            reduce using rule 5 (statement -> python_code_stmt .)
    }               reduce using rule 5 (statement -> python_code_stmt .)


state 6

    (6) statement -> conditional .
    KWORD           reduce using rule 6 (statement -> conditional .)
    ID              reduce using rule 6 (statement -> conditional .)
    CLASS           reduce using rule 6 (statement -> conditional .)
    FUNC            reduce using rule 6 (statement -> conditional .)
    PYTHON_CODE     reduce using rule 6 (statement -> conditional .)
    IF              reduce using rule 6 (statement -> conditional .)
    (               reduce using rule 6 (statement -> conditional .)
    !               reduce using rule 6 (statement -> conditional .)
    +               reduce using rule 6 (statement -> conditional .)
    -               reduce using rule 6 (statement -> conditional .)
    [               reduce using rule 6 (statement -> conditional .)
    {               reduce using rule 6 (statement -> conditional .)
    STRING          reduce using rule 6 (statement -> conditional .)
    FALSE           reduce using rule 6 (statement -> conditional .)
    TRUE            reduce using rule 6 (statement -> conditional .)
    FLOAT           reduce using rule 6 (statement -> conditional .)
    INT             reduce using rule 6 (statement -> conditional .)
    $end            reduce using rule 6 (statement -> conditional .)
    }               reduce using rule 6 (statement -> conditional .)


state 7

    (7) statement -> class_attribute_assignment .
    KWORD           reduce using rule 7 (statement -> class_attribute_assignment .)
    ID              reduce using rule 7 (statement -> class_attribute_assignment .)
    CLASS           reduce using rule 7 (statement -> class_attribute_assignment .)
    FUNC            reduce using rule 7 (statement -> class_attribute_assignment .)
    PYTHON_CODE     reduce using rule 7 (statement -> class_attribute_assignment .)
    IF              reduce using rule 7 (statement -> class_attribute_assignment .)
    (               reduce using rule 7 (statement -> class_attribute_assignment .)
    !               reduce using rule 7 (statement -> class_attribute_assignment .)
    +               reduce using rule 7 (statement -> class_attribute_assignment .)
    -               reduce using rule 7 (statement -> class_attribute_assignment .)
    [               reduce using rule 7 (statement -> class_attribute_assignment .)
    {               reduce using rule 7 (statement -> class_attribute_assignment .)
    STRING          reduce using rule 7 (statement -> class_attribute_assignment .)
    FALSE           reduce using rule 7 (statement -> class_attribute_assignment .)
    TRUE            reduce using rule 7 (statement -> class_attribute_assignment .)
    FLOAT           reduce using rule 7 (statement -> class_attribute_assignment .)
    INT             reduce using rule 7 (statement -> class_attribute_assignment .)
    $end            reduce using rule 7 (statement -> class_attribute_assignment .)
    }               reduce using rule 7 (statement -> class_attribute_assignment .)


state 8

    (8) statement -> function_call_stmt .
    KWORD           reduce using rule 8 (statement -> function_call_stmt .)
    ID              reduce using rule 8 (statement -> function_call_stmt .)
    CLASS           reduce using rule 8 (statement -> function_call_stmt .)
    FUNC            reduce using rule 8 (statement -> function_call_stmt .)
    PYTHON_CODE     reduce using rule 8 (statement -> function_call_stmt .)
    IF              reduce using rule 8 (statement -> function_call_stmt .)
    (               reduce using rule 8 (statement -> function_call_stmt .)
    !               reduce using rule 8 (statement -> function_call_stmt .)
    +               reduce using rule 8 (statement -> function_call_stmt .)
    -               reduce using rule 8 (statement -> function_call_stmt .)
    [               reduce using rule 8 (statement -> function_call_stmt .)
    {               reduce using rule 8 (statement -> function_call_stmt .)
    STRING          reduce using rule 8 (statement -> function_call_stmt .)
    FALSE           reduce using rule 8 (statement -> function_call_stmt .)
    TRUE            reduce using rule 8 (statement -> function_call_stmt .)
    FLOAT           reduce using rule 8 (statement -> function_call_stmt .)
    INT             reduce using rule 8 (statement -> function_call_stmt .)
    $end            reduce using rule 8 (statement -> function_call_stmt .)
    }               reduce using rule 8 (statement -> function_call_stmt .)


state 9

    (9) statement -> class_declaration .
    KWORD           reduce using rule 9 (statement -> class_declaration .)
    ID              reduce using rule 9 (statement -> class_declaration .)
    CLASS           reduce using rule 9 (statement -> class_declaration .)
    FUNC            reduce using rule 9 (statement -> class_declaration .)
    PYTHON_CODE     reduce using rule 9 (statement -> class_declaration .)
    IF              reduce using rule 9 (statement -> class_declaration .)
    (               reduce using rule 9 (statement -> class_declaration .)
    !               reduce using rule 9 (statement -> class_declaration .)
    +               reduce using rule 9 (statement -> class_declaration .)
    -               reduce using rule 9 (statement -> class_declaration .)
    [               reduce using rule 9 (statement -> class_declaration .)
    {               reduce using rule 9 (statement -> class_declaration .)
    STRING          reduce using rule 9 (statement -> class_declaration .)
    FALSE           reduce using rule 9 (statement -> class_declaration .)
    TRUE            reduce using rule 9 (statement -> class_declaration .)
    FLOAT           reduce using rule 9 (statement -> class_declaration .)
    INT             reduce using rule 9 (statement -> class_declaration .)
    $end            reduce using rule 9 (statement -> class_declaration .)
    }               reduce using rule 9 (statement -> class_declaration .)


state 10

    (10) statement -> function_declaration .
    KWORD           reduce using rule 10 (statement -> function_declaration .)
    ID              reduce using rule 10 (statement -> function_declaration .)
    CLASS           reduce using rule 10 (statement -> function_declaration .)
    FUNC            reduce using rule 10 (statement -> function_declaration .)
    PYTHON_CODE     reduce using rule 10 (statement -> function_declaration .)
    IF              reduce using rule 10 (statement -> function_declaration .)
    (               reduce using rule 10 (statement -> function_declaration .)
    !               reduce using rule 10 (statement -> function_declaration .)
    +               reduce using rule 10 (statement -> function_declaration .)
    -               reduce using rule 10 (statement -> function_declaration .)
    [               reduce using rule 10 (statement -> function_declaration .)
    {               reduce using rule 10 (statement -> function_declaration .)
    STRING          reduce using rule 10 (statement -> function_declaration .)
    FALSE           reduce using rule 10 (statement -> function_declaration .)
    TRUE            reduce using rule 10 (statement -> function_declaration .)
    FLOAT           reduce using rule 10 (statement -> function_declaration .)
    INT             reduce using rule 10 (statement -> function_declaration .)
    $end            reduce using rule 10 (statement -> function_declaration .)
    }               reduce using rule 10 (statement -> function_declaration .)


state 11

    (17) kword_declaration -> KWORD . ID ( empty ) { program }
    (18) kword_declaration -> KWORD . ID ( function_arguments ) { program }
    ID              shift and go to state 42


state 12

    (27) variable_assignment -> ID . = expression ;
    (75) id -> ID .
    =               shift and go to state 43
    COLON_COLON     reduce using rule 75 (id -> ID .)
    (               reduce using rule 75 (id -> ID .)
    >               reduce using rule 75 (id -> ID .)
    <               reduce using rule 75 (id -> ID .)
    &               reduce using rule 75 (id -> ID .)
    |               reduce using rule 75 (id -> ID .)
    EQ_GREATER      reduce using rule 75 (id -> ID .)
    EQ_LESS         reduce using rule 75 (id -> ID .)
    NOT_EQEQ        reduce using rule 75 (id -> ID .)
    EQEQ            reduce using rule 75 (id -> ID .)
    %               reduce using rule 75 (id -> ID .)
    *               reduce using rule 75 (id -> ID .)
    /               reduce using rule 75 (id -> ID .)
    -               reduce using rule 75 (id -> ID .)
    +               reduce using rule 75 (id -> ID .)


state 13

    (49) expression -> ( . expression )
    (68) _numpy -> ( . positional_args )
    (38) expression -> . _numpy
    (39) expression -> . _list
    (40) expression -> . _tuple
    (41) expression -> . class_attribute
    (42) expression -> . id
    (43) expression -> . string
    (44) expression -> . bool
    (45) expression -> . float
    (46) expression -> . int
    (47) expression -> . function_call
    (48) expression -> . python_code
    (49) expression -> . ( expression )
    (50) expression -> . expression > expression
    (51) expression -> . expression < expression
    (52) expression -> . ! expression
    (53) expression -> . expression & expression
    (54) expression -> . expression | expression
    (55) expression -> . expression EQ_GREATER expression
    (56) expression -> . expression EQ_LESS expression
    (57) expression -> . expression NOT_EQEQ expression
    (58) expression -> . expression EQEQ expression
    (59) expression -> . expression % expression
    (60) expression -> . expression * expression
    (61) expression -> . expression / expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (64) expression -> . + expression
    (65) expression -> . - expression
    (23) positional_args -> . expression
    (24) positional_args -> . positional_args , expression
    (68) _numpy -> . ( positional_args )
    (67) _list -> . [ positional_args ]
    (66) _tuple -> . { positional_args }
    (74) class_attribute -> . expression COLON_COLON ID
    (75) id -> . ID
    (70) string -> . STRING
    (72) bool -> . FALSE
    (73) bool -> . TRUE
    (71) float -> . FLOAT
    (69) int -> . INT
    (13) function_call -> . expression ( empty )
    (14) function_call -> . expression ( function_arguments )
    (76) python_code -> . PYTHON_CODE
    (               shift and go to state 13
    !               shift and go to state 32
    +               shift and go to state 34
    -               shift and go to state 33
    [               shift and go to state 35
    {               shift and go to state 14
    ID              shift and go to state 49
    STRING          shift and go to state 36
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    FLOAT           shift and go to state 39
    INT             shift and go to state 40
    PYTHON_CODE     shift and go to state 22

    expression                     shift and go to state 44
    positional_args                shift and go to state 45
    _numpy                         shift and go to state 24
    _list                          shift and go to state 25
    _tuple                         shift and go to state 26
    class_attribute                shift and go to state 46
    id                             shift and go to state 27
    string                         shift and go to state 28
    bool                           shift and go to state 29
    float                          shift and go to state 30
    int                            shift and go to state 31
    function_call                  shift and go to state 47
    python_code                    shift and go to state 48

state 14

    (66) _tuple -> { . positional_args }
    (23) positional_args -> . expression
    (24) positional_args -> . positional_args , expression
    (38) expression -> . _numpy
    (39) expression -> . _list
    (40) expression -> . _tuple
    (41) expression -> . class_attribute
    (42) expression -> . id
    (43) expression -> . string
    (44) expression -> . bool
    (45) expression -> . float
    (46) expression -> . int
    (47) expression -> . function_call
    (48) expression -> . python_code
    (49) expression -> . ( expression )
    (50) expression -> . expression > expression
    (51) expression -> . expression < expression
    (52) expression -> . ! expression
    (53) expression -> . expression & expression
    (54) expression -> . expression | expression
    (55) expression -> . expression EQ_GREATER expression
    (56) expression -> . expression EQ_LESS expression
    (57) expression -> . expression NOT_EQEQ expression
    (58) expression -> . expression EQEQ expression
    (59) expression -> . expression % expression
    (60) expression -> . expression * expression
    (61) expression -> . expression / expression
    (62) expression -> . expression - expression
    (63) expression -> . expression + expression
    (64) expression -> . + expression
    (65) expression -> . - expression
    (68) _numpy -> . ( positional_args )
    (67) _list -> . [ positional_args ]
    (66) _tuple -> . { positional_args }
    (74) class_attribute -> . expression COLON_COLON ID
    (75) id -> . ID
    (70) string -> . STRING
    (72) bool -> . FALSE
    (73) bool -> . TRUE
    (71) float -> . FLOAT
    (69) int -> . INT
    (13) function_call -> . expression ( empty )
    (14) function_call -> . expression ( function_arguments )
    (76) python_code -> . PYTHON_CODE
    (               shift and go to state 13
    !               shift and go to state 32
    +               shift and go to state 34
    -               shift and go to state 33
    [               shift and go to state 35
    {               shift and go to state 14
    ID              shift and go to state 49
    STRING          shift and go to state 36
    FALSE           shift and go to state 37
    TRUE            shift and go to state 38
    FLOAT           shift and go to state 39
    INT             shift and go to state 40
    PYTHON_CODE     shift and go to state 22

    positional_args                shift and go to state 50
    expression                     shift and go to state 51
    _numpy                         shift and go to state 24
    _list                          shift and go to state 25
    _tuple                         shift and go to state 26
    class_attribute                shift and go to state 46
    id                             shift and go to state 27
    string                         shift and go to state 28
    bool                           shift and go to state 29
    float                          shift and go to state 30
    int                            shift and go to state 31
    function_call                  shift and go to state 47
    python_code                    shift and go to state 48

state 15

    (74) class_attribute -> expression . COLON_COLON ID
    (13) function_call -> expression . ( empty )
    (14) function_call -> expression . ( function_arguments )
    (50) expression -> expression . > expression
    (51) expression -> expression . < expression
    (53) expression -> expression . & expression
    (54) expression -> expression . | expression
    (55) expression -> expression . EQ_GREATER expression
    (56) expression -> expression . EQ_LESS expression
    (57) expression -> expression . NOT_EQEQ expression
    (58) expression -> expression . EQEQ expression
    (59) expression -> expression . % expression
    (60) expression -> expression . * expression
    (61) expression -> expression . / expression
    (62) expression -> expression . - expression
    (63) expression -> expression . + expression
    COLON_COLON     shift and go to state 52
    (               shift and go to state 53
    >               shift and go to state 54
    <               shift and go to state 55
    &               shift and go to state 56
    |               shift and go to state 57
    EQ_GREATER      shift and go to state 58
    EQ_LESS         shift and go to state 59
    NOT_EQEQ        shift and go to state 60
    EQEQ            shift and go to state 61
    %               shift and go to state 62
    *               shift and go to state 63
    /               shift and go to state 64
    -               shift and go to state 65
    +               shift and go to state 66


state 16

    (12) python_code_stmt -> python_code . ;
    (48) expression -> python_code .
    ;               shift and go to state 67
    COLON_COLON     reduce using rule 48 (expression -> python_code .)
    (               reduce using rule 48 (expression -> python_code .)
    >               reduce using rule 48 (expression -> python_code .)
    <               reduce using rule 48 (expression -> python_code .)
    &               reduce using rule 48 (expression -> python_code .)
    |               reduce using rule 48 (expression -> python_code .)
    EQ_GREATER      reduce using rule 48 (expression -> python_code .)
    EQ_LESS         reduce using rule 48 (expression -> python_code .)
    NOT_EQEQ        reduce using rule 48 (expression -> python_code .)
    EQEQ            reduce using rule 48 (expression -> python_code .)
    %               reduce using rule 48 (expression -> python_code .)
    *               reduce using rule 48 (expression -> python_code .)
    /               reduce using rule 48 (expression -> python_code .)
    -               reduce using rule 48 (expression -> python_code .)
    +               reduce using rule 48 (expression -> python_code .)


state 17
